[Separate route] stops formatting buttons from wrapping and re-introduces scrolling for them.

--- a/static/less/composer.less
+++ b/static/less/composer.less
@@ -354,6 +354,8 @@ html.composing {
 		}
 
 		.formatting-group {
+			overflow-x: scroll;
+			white-space: nowrap;
 			display: inline-block;
 			list-style: none;
 			padding: 0;
@@ -460,6 +462,12 @@ html.composing {
 	.composer {
 		width: 100%;
 		padding-top: 0;
+		.formatting-bar {
+			.formatting-group {
+				display: block;
+			}
+
+		}
 	}
 
 	.resizer {
